# minterpy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTION.rst  LICENSE  LICENSE.txt  README.md  WISHLIST.rst  environment.yaml  mypy.ini  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py
.github/: CONTRIBUTING.md
docs/: Makefile  TODO.rst  bibliography.bib  conf.py  glossary.rst  index.rst  refs.bib
docs/api/: Grid.rst  index.rst  multiIndexTree.rst
docs/api/MultiIndex/: index.rst
docs/api/core/: grid.rst  index.rst  multi_index.rst  tree.rst
docs/api/core/ABC/: index.rst  operatorABC.rst  polyABC.rst  trafoABC.rst
docs/api/extras/: index.rst  ordinary_regression.rst  regression_abc.rst
docs/api/internal/: can_eval_mult.rst  coreutils.rst  index.rst  jit_compiled_utils.rst  poly-utils.rst  single_eval.rst  trafoutils.rst  utils.rst  verification.rst
docs/api/interpolation/: index.rst  interpolant.rst  interpolate.rst  interpolator.rst
docs/api/polyBases/: canonical.rst  index.rst  lagrange.rst  newton.rst  polyABC.rst
docs/api/transformOperators/: barycentricDictTransform.rst  barycentricFactorisedTransform.rst  barycentricOp.rst  barycentricOpABC.rst  barycentricPiecewiseTransform.rst  index.rst  matrixTransform.rst  transformOpABC.rst  transformationOperators.rst
docs/api/transformations/: index.rst  interface.rst  transformOpABC.rst  transformationABC.rst  transformationCanonical.rst  transformationIdentity.rst  transformationLagrange.rst  transformationMeta.rst  transformationNewton.rst
docs/assets/ipe-source/: documentation-system.ipe  documentation-tooling.ipe
docs/contributors/: about-us.rst  code-of-conduct.rst  index.rst
docs/contributors/contrib-dev/: index.rst
docs/contributors/contrib-docs/: about-the-docs.rst  how-to-contrib.rst  index.rst
docs/contributors/contrib-docs/guidelines/: index.rst  ipynb-based-docs.rst  py-based-docs.rst  rest-based-docs.rst  writing-style.rst
docs/developer/: contributing_to_code.rst  index.rst
docs/developers/: about-us.rst  about_us.rst  contributing_to_documentation.rst  index.rst
docs/developers/contrib-code-base/: index.rst
docs/developers/contrib-doc/: about-the-doc.rst  how-to-contrib.rst  index.rst
docs/developers/contrib-doc/contrib-doc-guidelines/: api-doc.rst  index.rst  ipynb-based-doc.rst
docs/fundamentals/: barycentric-transformation.rst  index.rst  interpolation-evaluation.rst  interpolation-in-unisolvent-nodes.rst  interpolation-on-unisolvent-nodes.rst  interpolation_differentiation.rst  introduction.rst  multivariate-dds.rst  polynomial-bases.rst  transformation.rst
docs/fundamentals/keynote_files/: 1D_interpol.key  plane.key  split_tree_1D.key  split_tree_1D_dep.key  split_tree_l2.key  split_tree_l2a.key  split_tree_l2a_dep.key  split_tree_l2a_depp.key
docs/getting-started/: index.rst  installation.rst  multi-dimensional-function-interpolation.ipynb  one-dimensional-function-interpolation.ipynb  polynomial-regression.ipynb
docs/getting_started/: index.rst  one_dimensional_interpolation.rst
docs/how-to/: index.rst
docs/how-to/integration/: index.rst  poly-interpolant-integration-1d.ipynb  poly-interpolant-integration-md.ipynb
docs/how-to/multi-index-set/: index.rst  multi-index-set-add.ipynb  multi-index-set-comparison.ipynb  multi-index-set-complete.ipynb  multi-index-set-create.ipynb  multi-index-set-downward-closed.ipynb  multi-index-set-empty.ipynb  multi-index-set-equality.ipynb  multi-index-set-membership.ipynb  multi-index-set-multiply.ipynb  multi-index-set-union.ipynb
docs/math_intro/: intro.rst
docs/overview/: index.rst
docs/usage/: intro.rst
notebooks/: Points_Generator.ipynb  phase_retreival_AO.ipynb  template.ipynb
oldPack/: Integrator.py  MultiIndicesTree.py  Solvers.py  Transform.py  diagnostics.py  otherIntegrators.py  unit_test.py  utils.py
scripts/: train_model.py
src/minterpy/: __init__.py  barycentric.py  barycentric2.py  barycentric_conversion.py  barycentric_precomp.py  barycentric_transformation_fcts.py  canonical_polynomial.py  dds.py  derivation.py  global_settings.py  grid.py  interpolation.py  jit_compiled_utils.py  joint_polynomial.py  lagrange_polynomial.py  multi_index.py  multi_index_tree.py  multi_index_utils.py  multivariate_polynomial_abstract.py  newton_polynomial.py  transformation_abstract.py  transformation_canonical.py  transformation_identity.py  transformation_lagrange.py  transformation_meta.py  transformation_newton.py  transformation_operator_abstract.py  transformation_operators.py  transformation_utils.py  utils.py  verification.py
src/minterpy/core/: __init__.py  grid.py  multi_index.py  tree.py  utils.py  verification.py
src/minterpy/core/ABC/: __init__.py  multivariate_polynomial_abstract.py  operator_abstract.py  transformation_abstract.py  transformation_operator_abstract.py
src/minterpy/extras/regression/: __init__.py  ordinary_regression.py  regression_abc.py
src/minterpy/polynomials/: __init__.py  canonical_polynomial.py  lagrange_polynomial.py  newton_polynomial.py  utils.py
src/minterpy/schemes/: __init__.py  matrix_operator.py
src/minterpy/schemes/barycentric/: __init__.py  conversion.py  operators.py  precomp.py  transformation_fcts.py
src/minterpy/transformations/: __init__.py  canonical.py  identity.py  interface.py  lagrange.py  newton.py  utils.py
tests/: auxiliaries.py  canonical_poly_arithmetic_test.py  conftest.py  derivation_test.py  lagrange_poly_aritmetic_test.py  multi_index_test.py  multi_index_tests.py  poly_arithmetic_test.py  poly_eval_test.py  test_canonical_polynomial.py  test_grid.py  test_interpolation.py  test_lagrange_polynomial.py  test_multi_index.py  test_multi_index_utils.py  test_newton_polynomial.py  test_ordinary_regression.py  test_package.py  test_polynomial.py  test_settings.py  test_template.py  test_transformation.py  test_verification.py  transformation_test.py  transformation_tests.py  unit_test.py
(+11 files in other folders)
