[metadata]
name = minterpy
description = Python library for multivariate polynomial interpolation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.hzdr.de/interpol/minterpy
author = file: AUTHORS.md
author_email = u.hernandez@hzdr.de
maintainer = Minterpy development team
maintainer_email = u.hernandez@hzdr.de
license = MIT
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://gitlab.hzdr.de/interpol/minterpy/issues

[options]
packages = find:
install_requires =
    attrs>=20.3.0
    matplotlib>=3.4.2
    numba>=0.53.1
    numpy>=1.13.3
    pytest>=4.6
    pytest-cov>=2.12.0
    scipy>=1.6.3
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    matplotlib>=3.4.2
    numba>=0.53.1
    numpy>=1.13.3
    pytest>=4.6
    pytest-cov>=2.12.0
    scipy>=1.6.3
docs =
    Sphinx>=3.0.0
    matplotlib>=3.4.2
    numba>=0.53.1
    numpy>=1.13.3
    pytest>=4.6
    pytest-cov>=2.12.0
    scipy>=1.6.3
    myst-nb>=0.17.2
    ipykernel>=6.9.1
    ipython-genutils>=0.2.0
    sphinx-copybutton>=0.5.0
    sphinxcontrib.bibtex>=2.4.1
    sphinx-autobuild>=2021.3.14
    pydata-sphinx-theme>=0.7.2
    
test =
    matplotlib>=3.4.2
    numba>=0.53.1
    numpy>=1.13.3
    pytest>=4.6
    pytest-cov>=2.12.0
    scipy>=1.6.3

[tool:pytest]
addopts = -ra -Wd
    --cov-config=.coveragerc
    --cov minterpy
    --cov-report term-missing
    --cov-report html
testpaths =
    tests

[check-manifest]
ignore =
    .github/**
    docs/**
    .pre-commit-config.yaml
    .readthedocs.yml
    src/*/version.py

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T

[mypy]
files = src
python_version = 3.8
plugins = numpy.typing.mypy_plugin
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-numpy]
ignore_missing_imports = True
